[tool.poetry]
authors = ["Valon Rama <valon.rama@creditgenie.com>"]
description = ""
name = "videogamepricer"
version = "0.1.0"

[tool.poetry.dependencies]
pandas = "^1.2.4"
python = "^3.8"
beautifulsoup4 = "^4.9.3"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}

[tool.poetry.dev-dependencies]
black = "^21.4b0"
flake8 = "^3.9.1"
pytest = "^5.2"

[tool.black]
skip-string-normalization = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
