[tool.poetry]
authors = ["Valon Rama <vrama21@gmail.com>"]
description = ""
name = "videogamepricer"
version = "0.1.0"

[tool.poetry.scripts]
videogamepricer = "videogamepricer.main:main"

[tool.poetry.dependencies]
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
beautifulsoup4 = "^4.9.3"
numpy = "^1.22.3"
pandas = "^1.2.4"
python = "^3.10"
regex = "^2022.3.15"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^3.9.1"
pytest = "^5.2"

[tool.black]
line-length = 120

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
